--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "markdown.preview.fontSize": 18,
-    "terminal.integrated.fontSize": 18
+    "terminal.integrated.fontSize": 18,
+    "tailwindCSS.rootFontSize": 14
 }
